2007-08-11  Inge Wallin  <inge@lysator.liu.se>

	Make the code clearer by naming things better.
	* src/lib/placemarkpainter.{h,cpp} (testXBug): Renamed from testbug().
	(m_useXWorkaround): renamed from m_useworkaround
	
	Fix Krazy issue 13: proper include directives.
	* src/lib/TileCreator.h (TILECREATOR_H): Renamed from TILESCISSOR_H

	More cleaning
	* src/lib/MarbleWidget.cpp: Cleaning and make the code follow the
	coding standards.

	Simplify code in preparation for refactorings
	* src/lib/placemarkpainter.cpp (sphericalPaintPlaceFolder): Code
	simplifications
	(rectangularPaintPlaceFolder): Code simplifications

2007-08-11  Torsten Rahn  <rahn@kde.org>

    Adding "Set Home Location" to the RMB menu.
    (Wanted to have this in before the message string freeze).
    Something is strange with the sign of the 
    longitude stored in Radians .... I have to check that.

    TODO: store in configuration file.

    * src/lib/MarbleWidget.cpp
    * src/lib/MarbleWidgetPopupMenu.h
    * src/lib/MarbleWidgetPopupMenu.cpp

2007-08-11  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarbleWidget.{cpp,h}:
        - Introduce setProjection() and projection()
	- introduce homePoint( double& lon, double& lat )

2007-08-11  Inge Wallin  <inge@lysator.liu.se>

	Added getter for symmetry.
	* src/lib/AbstractLayer/AbstractLayerInterface.cpp (visible): new
	method.

2007-08-11  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarbleWidget.{cpp,h}:
        - Some fixes concerning Carlos' introduction of
        projections
        - make all methods accept Degree as a unit by 
          default ( geoCoordinates RAD->DEG )
    * src/lib/MarbleWidgetInputHandler.cpp:
    * src/lib/MarbleWidgetPopupMenu.{cpp,h}:
        - make all methods accept Degree as a unit by 
          default ( geoCoordinates RAD->DEG )
    * src/lib/Quaternion.cpp:
        - remove DEG2ONE.
        - fix an inaccuracy due to usage of int instead of double
    * src/lib/global.h:
        - remove DEG2ONE.