@@ -885,7 +885,9 @@ void MarbleWidget::paintEvent(QPaintEvent *evt)
 void MarbleWidget::paint(QPainter *painter, const QStyleOptionGraphicsItem *option,
                    QWidget *widget)
 {
-
+    Q_UNUSED( painter );
+    Q_UNUSED( option );
+    Q_UNUSED( widget );
 }
 
 void MarbleWidget::goHome()
