@@ -22,7 +22,7 @@
 enum Projection { 
     Spherical,
     Equirectangular, 
-    Mercator
+    //Mercator
 };
 
 // Define FLAT_PROJ here to get flat projection.
