@@ -1,5 +1,10 @@
 2007-08-11  Inge Wallin  <inge@lysator.liu.se>
 
+	Remove warnings
+	src/lib/MarbleWidget.cpp (paint): mark unused with Q_UNUSED()
+	src/lib/global.h (Projection): Disable Mercator
+	src/lib/texcolorizer.cpp (rectangularColorizer): comment out unused var
+
 	Make the code clearer by naming things better.
 	* src/lib/placemarkpainter.{h,cpp} (testXBug): Renamed from testbug().
 	(m_useXWorkaround): renamed from m_useworkaround
